--- a/src/case-item.pug
+++ b/src/case-item.pug
@@ -26,13 +26,13 @@ block content
 		// Panel
 		.section-case-item__panel
 			h3.section-case-item__panel-title Задача
-			ul.list-arrow.list-arrow--blue.section-case-item__panel-list
+			ul.list-arrow.list-arrow--blue-arrow.section-case-item__panel-list
 				li.list-arrow__elem Реализовать интеграцию с транспортными компаниями
 				li.list-arrow__elem Упростить документооборот
 		// Panel
 		.section-case-item__panel
 			h3.section-case-item__panel-title Сложности
-			ul.list-arrow.list-arrow--blue.section-case-item__panel-list
+			ul.list-arrow.list-arrow--blue-arrow.section-case-item__panel-list
 				li.list-arrow__elem Большое количество договор с разными транспортными компаниями
 				li.list-arrow__elem Административные расходы на обработку процесса со стороны клиента
 				li.list-arrow__elem Невозможность формирования накладных и прочих документов
