--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -47,7 +47,7 @@ block content
 						li.dropdown__option(data-value="Услуга 2") Услуга 2
 						li.dropdown__option(data-value="Услуга 3") Услуга 3
 		p.section-case-list__description.section-case-list__description--desktop Всего найдено: 145
-		.section-case-list__grid
+		.section-case-list__grid.show-more
 			// Card
 			a.section-case-list__card.card.card--cases.card--with-tag-line(href="#")
 				ul.card__tag-list
@@ -87,7 +87,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg3.jpg", alt)
 			// Card
-			a.section-case-list__card.card.card--cases.card--with-tag-line(href="#")
+			a.section-case-list__card.card.card--cases.card--with-tag-line.show-more__mobile-hide(href="#")
 				ul.card__tag-list
 					li.card__tag Fashion
 					li.card__tag Fashion
@@ -99,7 +99,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg4.jpg", alt)
 			// Card
-			a.section-case-list__card.card.card--cases.card--with-tag-line(href="#")
+			a.section-case-list__card.card.card--cases.card--with-tag-line.show-more__mobile-hide(href="#")
 				ul.card__tag-list
 					li.card__tag Automotive
 					li.card__tag Складское хранение
@@ -111,7 +111,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg5.jpg", alt)
 			// Card
-			a.section-case-list__card.card.card--cases.card--with-tag-line(href="#")
+			a.section-case-list__card.card.card--cases.card--with-tag-line.show-more__mobile-hide(href="#")
 				ul.card__tag-list
 					li.card__tag Fashion
 					li.card__tag Fashion
@@ -123,4 +123,4 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg6.jpg", alt)
 		.section-case-list__button-row
-			button.button.button--outline-blue-light.button--md.section-case-list__button Показать еще
+			button.button.button--outline-blue-light.button--md.section-case-list__button.show-more__button Показать еще
