--- a/src/press-list.pug
+++ b/src/press-list.pug
@@ -21,72 +21,73 @@ block content
 				a.section-press-list__year.section-press-list__year--active(href="#") 2022
 				a.section-press-list__year(href="#") 2021
 				a.section-press-list__year(href="#") 2020
-				input.form-control.form-control--gray.section-press-list__search(type="text", placeholder="Поиск по пресс-релизам...")
-		.news-row.news-row--two-col.section-press-list__top-row
-			// News
-			a.news-card.news-card--big(href="#")
-				img.news-card__img(src="images/common/news4.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период
-						br
-						| ограничений на 06 октября
-			// News
-			a.news-card.news-card--big(href="#")
-				img.news-card__img(src="images/common/news5.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период
-						br
-						| ограничений на 06 октября
-		.news-row.section-press-list__bottom-row
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news1.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news2.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news3.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news1.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news2.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-			// News
-			a.news-card.news-card--small(href="#")
-				img.news-card__img(src="images/common/news3.jpg", alt)
-				.news-card__content-box
-					time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-					p.news-card__title Логистика в период ограничений
-						br
-						| на 06 октября
-		.section-press-list__button-row
-			button.button.button--outline-blue.button--md.section-press-list__button Показать еще
+				input.form-control.form-control--gray.section-press-list__search(type="text", placeholder="Поиск...")
+		.show-more
+			.section-press-list__top-row
+				// News
+				a.news-card.news-card--big.section-press-list__news-item(href="#")
+					img.news-card__img(src="images/common/news4.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период
+							br
+							| ограничений на 06 октября
+				// News
+				a.news-card.news-card--big.section-press-list__news-item(href="#")
+					img.news-card__img(src="images/common/news5.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период
+							br
+							| ограничений на 06 октября
+			.section-press-list__bottom-row
+				// News
+				a.news-card.news-card--small.section-press-list__news-item(href="#")
+					img.news-card__img(src="images/common/news1.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+				// News
+				a.news-card.news-card--small.section-press-list__news-item.show-more__mobile-hide(href="#")
+					img.news-card__img(src="images/common/news2.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+				// News
+				a.news-card.news-card--small.section-press-list__news-item.show-more__mobile-hide(href="#")
+					img.news-card__img(src="images/common/news3.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+				// News
+				a.news-card.news-card--small.section-press-list__news-item.show-more__mobile-hide(href="#")
+					img.news-card__img(src="images/common/news1.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+				// News
+				a.news-card.news-card--small.section-press-list__news-item.show-more__mobile-hide(href="#")
+					img.news-card__img(src="images/common/news2.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+				// News
+				a.news-card.news-card--small.section-press-list__news-item.show-more__mobile-hide(href="#")
+					img.news-card__img(src="images/common/news3.jpg", alt)
+					.news-card__content-box
+						time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+						p.news-card__title Логистика в период ограничений
+							br
+							| на 06 октября
+			.section-press-list__button-row
+				button.button.button--outline-blue.button--md.section-press-list__button.show-more__button Показать еще
