--- a/src/scss/components/sections/_section-service-list.scss
+++ b/src/scss/components/sections/_section-service-list.scss
@@ -1,6 +1,10 @@
 .section-service-list {
 	padding-top: 20px;
-	padding-bottom: 60px;
+	padding-bottom: 45px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-bottom: 60px;
+	}
 
 	&--service {
 		padding-top: 44px;
@@ -8,33 +12,55 @@
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 29px;
+		margin-bottom: 17px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 29px;
+		}
 
 		.section-service-list--service & {
-			margin-bottom: 56px;
+			@media (min-width: $breakpoint-desktop) {
+				margin-bottom: 56px;
+			}
 		}
 	}
 
 	&__description {
 		margin-top: 0;
-		margin-bottom: 38px;
+		margin-bottom: 23px;
 		font-family: $font-secondary;
-		font-size: 16px;
-		line-height: 32px;
+		font-size: 14px;
+		line-height: 14px;
 		font-weight: 500;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 38px;
+			font-size: 16px;
+			line-height: 24px;
+		}
 	}
 
 	&__grid {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-column-gap: 32px;
+		grid-template-columns: 100%;
 		grid-template-rows: auto;
-		grid-row-gap: 36px;
-		margin-bottom: 68px;
+		grid-row-gap: 24px;
+		margin-bottom: 38px;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-template-columns: repeat(3, 1fr);
+			grid-column-gap: 32px;
+			grid-template-rows: auto;
+			grid-row-gap: 36px;
+			margin-bottom: 68px;
+		}
 	}
 
 	&__card {
-		min-height: 379px;
+		min-height: 279px;
+		@media (min-width: $breakpoint-desktop) {
+			min-height: 379px;
+		}
 	}
 
 	&__button-row {
@@ -44,5 +70,9 @@
 	&__button {
 		width: 100%;
 		max-width: 248px;
+
+		.section-service-list--service & {
+			max-width: 100%;
+		}
 	}
 }
