--- a/src/career-item.pug
+++ b/src/career-item.pug
@@ -26,7 +26,7 @@ block content
 			// Panel
 			.section-vacancy-item__panel
 				h3.section-vacancy-item__panel-title Перспективы и возможности
-				ul.list-arrow.list-arrow--blue.section-vacancy-item__panel-list
+				ul.list-arrow.list-arrow--blue-arrow.section-vacancy-item__panel-list
 					li.list-arrow__elem Возможность профессионального роста
 					li.list-arrow__elem Работа в команде профессионалов
 					li.list-arrow__elem Обучение с наставником в первые месяцы
@@ -34,18 +34,18 @@ block content
 			.section-vacancy-item__panel
 				h3.section-vacancy-item__panel-title Ключевые задачи
 				.section-vacancy-item__panel-row
-					ul.list-arrow.list-arrow--blue.section-vacancy-item__panel-list
+					ul.list-arrow.list-arrow--blue-arrow.section-vacancy-item__panel-list
 						li.list-arrow__elem Контроль соблюдения требований
 						li.list-arrow__elem Подготовка организации и участие во внутренних и внешних аудитах
 						li.list-arrow__elem Коммуникации с клиентами
-					ul.list-arrow.list-arrow--blue.section-vacancy-item__panel-list
+					ul.list-arrow.list-arrow--blue-arrow.section-vacancy-item__panel-list
 						li.list-arrow__elem Мониторинг KPI
 						li.list-arrow__elem Регулярное проведение опросов клиентов
 						li.list-arrow__elem Проведение самоинспекций и аудитов на складе
 			// Panel
 			.section-vacancy-item__panel
 				h3.section-vacancy-item__panel-title Мы ищем сотрудников, которые:
-				ul.list-arrow.list-arrow--blue.section-vacancy-item__panel-list
+				ul.list-arrow.list-arrow--blue-arrow.section-vacancy-item__panel-list
 					li.list-arrow__elem Хотят развиваться
 					li.list-arrow__elem Знают требования стандартов ISO 9001
 					li.list-arrow__elem Ответственные и коммуникабельные
