--- a/src/index.pug
+++ b/src/index.pug
@@ -20,25 +20,25 @@ block content
 					|
 					|
 					strong.text-blue.strong.text-blue складские решения
-				a.button-arrow(href="#") Все индустрии
+				a.button-arrow.section-ready__arrow-button.section-ready__arrow-button--desktop(href="#") Все индустрии
 			.simple-card-row
 				// Card
-				a.simple-card.section-ready__card(href="#")
+				a.simple-card.section-ready__card.simple-card-row__card(href="#")
 					h3.simple-card__title Fashion
 					img.simple-card__bg(src="images/simple-card/img1.jpg", alt)
 				// Card
-				a.simple-card.section-ready__card(href="#")
+				a.simple-card.section-ready__card.simple-card-row__card(href="#")
 					h3.simple-card__title Healthcare
 					img.simple-card__bg(src="images/simple-card/img2.jpg", alt)
 				// Card
-				a.simple-card.section-ready__card(href="#")
+				a.simple-card.section-ready__card.simple-card-row__card(href="#")
 					h3.simple-card__title Automotive
 					img.simple-card__bg(src="images/simple-card/img3.jpg", alt)
 				.simple-card-row__links
 					a.simple-card-row__link(href="#") Telecom
 					a.simple-card-row__link(href="#") POSM
 					a.simple-card-row__link(href="#") FMCG
-
+			a.button-arrow.section-ready__arrow-button.section-ready__arrow-button--mobile(href="#") Все индустрии
 	// Section Services
 	section.section-services
 		.container
@@ -49,82 +49,92 @@ block content
 					span.text-blue Ma
 						span.text-red j
 						| or
-					|
-					|
-					|Terminal
-				a.button-arrow.section-services__title-btn(href="#") Все услуги
-			.section-services__row
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon1.svg", alt)
-					h3.section-services__link-title
-						|Ответственное
-						br
-						|Хранение
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon2.svg", alt)
-					h3.section-services__link-title
-						|Складская
-						br
-						|обработка
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon3.svg", alt)
-					h3.section-services__link-title Копакинг
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon4.svg", alt)
-					h3.section-services__link-title
-						| Производственная
-						br
-						| логистика
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon5.svg", alt)
-					h3.section-services__link-title Фулфилмент
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon6.svg", alt)
-					h3.section-services__link-title
-						| Маркировка
-						br
-						| честный знак
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon7.svg", alt)
-					h3.section-services__link-title
-						| Работа
-						br
-						| с комплектами
-				// Link
-				a.section-services__link(href="#")
-					.section-services__icon-box
-						img.section-services__icon(src="images/section-services/icon8.svg", alt)
-					h3.section-services__link-title Кросс-докинг
+					| Terminal
+				a.button-arrow.section-services__title-btn.section-services__title-btn--desktop(href="#") Все услуги
+			.free-slider.swiper.overflow-visible
+				.section-services__row.free-slider__wrapper.swiper-wrapper
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon1.svg", alt)
+						h3.section-services__link-title
+							|Ответственное
+							br
+							|Хранение
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon2.svg", alt)
+						h3.section-services__link-title
+							|Складская
+							br
+							|обработка
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon3.svg", alt)
+						h3.section-services__link-title Копакинг
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon4.svg", alt)
+						h3.section-services__link-title
+							| Производственная
+							br
+							| логистика
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon5.svg", alt)
+						h3.section-services__link-title Фулфилмент
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon6.svg", alt)
+						h3.section-services__link-title
+							| Маркировка
+							br
+							| честный знак
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon7.svg", alt)
+						h3.section-services__link-title
+							| Работа
+							br
+							| с комплектами
+					// Link
+					a.section-services__link.swiper-slide(href="#")
+						.section-services__icon-box
+							img.section-services__icon(src="images/section-services/icon8.svg", alt)
+						h3.section-services__link-title Кросс-докинг
+			a.button-arrow.section-services__title-btn.section-services__title-btn--mobile(href="#") Все услуги
 	// Section Slider terminal
-	section.section-slider-terminal.road.road--blue
+	section.section-slider-terminal.road.road--blue.road--terminal
 		.container
+			.section-slider-terminal__text-box.section-slider-terminal__text-box--mobile
+				h2.h2.section-slider-terminal__title
+					| Складские терминалы
+					br
+					span.text-blue Ma
+						span.text-red j
+						| or
+					| Terminal
+				p.section-slider-terminal__text Собственные складские площади класса А
 			.section-slider-terminal__row
 				.section-slider-terminal__col
-					h2.h2.section-slider-terminal__title
-						|Складские терминалы
-						br
-						span.text-blue Ma
-							span.text-red j
-							|or
-						|
-						|
-						|Terminal
-					p.section-slider-terminal__text Собственные складские площади класса А+
-					.slider__nav
+					.section-slider-terminal__text-box.section-slider-terminal__text-box--desktop
+						h2.h2.section-slider-terminal__title
+							|Складские терминалы
+							br
+							span.text-blue Ma
+								span.text-red j
+								|or
+							|
+							|
+							|Terminal
+						p.section-slider-terminal__text Собственные складские площади класса А
+					.slider__nav.section-slider-terminal__nav
 						button.slider__btn.slider__btn--prev(aria-label="Назад")
 							+svg("chevron-slider")(class="slider__btn-arrow")
 						.slider__pagination
@@ -174,20 +184,29 @@ block content
 							p.slider__slide-title
 								+svg("map-marker")(class="slider__map-icon")
 								|Истра
-
 	// Section Partner
-	section.section-partner.container
-		.section-partner__content
-			.section-partner__col
+	section.section-partner.section-partner--bg-image.container
+		.section-partner__box
+			.section-partner__nav-row
 				ul.section-partner__link-list
 					li.section-partner__link-elem
 						a.section-partner__link(href="#") 4PL оператор
 					li.section-partner__link-elem
 						a.section-partner__link(href="#") Логопарк
 					li.section-partner__link-elem
-						a.section-partner__link(href="#") О Major Terminal
+						a.section-partner__link.section-partner__link--active(href="#") О Major Terminal
 					li.section-partner__link-elem
 						a.section-partner__link(href="#") Ценности
+				.dropdown.dropdown--navigate.section-partner__dropdown
+					.dropdown__value-box
+						input.dropdown__value(type="text", value="4PL оператор", disabled)
+						+svg("chevron-dropdown", true)(class="dropdown__arrow")
+					ul.dropdown__options-list
+						li.dropdown__option.dropdown__option--selected(data-value="#") 4PL оператор
+						li.dropdown__option(data-value="#") Логопарк
+						li.dropdown__option(data-value="#") О Major Terminal
+						li.dropdown__option(data-value="#") Ценности
+			.section-partner__content
 				h2.h2.text-white.section-partner__title Ma
 					span.text-red j
 					| or Terminal – надежный поставщик всего комплекса складских услуг
@@ -204,7 +223,9 @@ block content
 							button.tabs__nav-button.tabs__nav-button--active(data-content="content1") Новости
 						li.tabs__nav-elem
 							button.tabs__nav-button(data-content="content2") Вебинары
-					a.button-arrow(href="#") Все новости
+					.show-laptop
+						a.button-arrow.section-news__all-btn.tabs__all-btn.tabs__all-btn--active(href="#", data-btn-content="content1") Все новости
+						a.button-arrow.section-news__all-btn.tabs__all-btn(href="#", data-btn-content="content2") Все вебинары
 				.tabs__content-box
 					// Content
 					.tabs__content.tabs__content--active#content1
@@ -215,27 +236,21 @@ block content
 									img.news-card__img(src="images/common/news6.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений
-											br
-											| на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
 							// News
 							.news-row__card-box
-								a.news-card(href="#")
+								a.news-card.news-card--short-mobile(href="#")
 									img.news-card__img(src="images/common/news7.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений
-											br
-											| на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
 							// News
 							.news-row__card-box
-								a.news-card(href="#")
+								a.news-card.news-card--short-mobile(href="#")
 									img.news-card__img(src="images/common/news8.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений
-											br
-											| на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
 					// Content
 					.tabs__content#content2
 						.news-row
@@ -245,18 +260,22 @@ block content
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Съёмки для корпоративного блога Inventive Retail Group в Логопарке Major Terminal
+
+				.hide-laptop
+					a.button-arrow.section-news__all-btn.tabs__all-btn.tabs__all-btn--active(href="#", data-btn-content="content1") Все новости
+					a.button-arrow.section-news__all-btn.tabs__all-btn(href="#", data-btn-content="content2") Все вебинары
