--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -15,27 +15,29 @@ block content
 	section(style="display:flex;padding:100px;")
 		ul.list-arrow.list-arrow--red(style="margin:auto")
 			li.list-arrow__elem
-				a(href="index.html", target="_blank") Главная
+				a(href="index.html", target="_blank") Главная // + моб версия
 			li.list-arrow__elem
-				a(href="404.html", target="_blank") 404
-			//-li.list-arrow__elem
-				a(href="contacts.html", target="_blank") Контакты
+				a(href="404.html", target="_blank") 404 // + моб версия
 			li.list-arrow__elem
-				a(href="about.html", target="_blank") О нас (4 вкладки)
+				a(href="industry-list.html", target="_blank") Индустрии // + моб версия
 			li.list-arrow__elem
-				a(href="industry-list.html", target="_blank") Индустрии
+				a(href="industry-fashion.html", target="_blank") Карточка индустрии (Fashion) // + моб версия
 			li.list-arrow__elem
-				a(href="industry.html", target="_blank") Карточка индустрии
+				a(href="industry-healthcare.html", target="_blank") Карточка индустрии (Healthcare) // + моб версия
+			li.list-arrow__elem
+				a(href="contacts.html", target="_blank") Контакты // + моб версия
+			li.list-arrow__elem
+				a(href="about.html", target="_blank") О нас (4 вкладки) // + моб версия
 			li.list-arrow__elem
 				a(href="case-list.html", target="_blank") Наши кейсы // + моб версия
 			li.list-arrow__elem
 				a(href="case-item.html", target="_blank") Карточка кейса // + моб версия
 			li.list-arrow__elem
-				a(href="service-list.html", target="_blank") Услуги
+				a(href="service-list.html", target="_blank") Услуги // + моб версия
 			li.list-arrow__elem
-				a(href="service.html", target="_blank") Услуга
+				a(href="service.html", target="_blank") Услуга // + моб версия
 			li.list-arrow__elem
-				a(href="press-list.html", target="_blank") Пресс-релизы
+				a(href="press-list.html", target="_blank") Пресс-релизы // + моб версия
 			li.list-arrow__elem
 				a(href="press-item.html", target="_blank") Карточка пресс-релиза // + моб версия
 			li.list-arrow__elem
@@ -47,4 +49,4 @@ block content
 			li.list-arrow__elem
 				a(href="protection.html", target="_blank") Охрана труда
 			li.list-arrow__elem
-				a(href="terminals.html", target="_blank") Наши терминалы
+				a(href="terminals.html", target="_blank") Наши терминалы // + моб версия
