--- a/src/scss/components/blocks/_links-row.scss
+++ b/src/scss/components/blocks/_links-row.scss
@@ -1,10 +1,19 @@
 .links-row {
 	display: flex;
-	flex-wrap: wrap;
 	column-gap: 23px;
 	row-gap: 16px;
+	overflow-x: auto;
+	scrollbar-width: none;
+	&::-webkit-scrollbar {
+		display: none;
+	}
+
+	@media (min-width: $breakpoint-desktop) {
+		flex-wrap: wrap;
+	}
 
 	&__link {
+		margin: 0;
 		padding: 8px 30px 10px;
 		font-family: $font-secondary;
 		font-size: 24px;
@@ -13,11 +22,12 @@
 		border-radius: 30px;
 		background-color: $color-blue-light3;
 		color: #062444;
-		transition: background-color $transition-default, color $transition-default;
+		white-space: nowrap;
+		/*transition: background-color $transition-default, color $transition-default;
 
 		&:hover {
 			background-color: #062444;
 			color: $color-white;
-		}
+		}*/
 	}
 }
