--- a/src/scss/components/blocks/_list-arrow.scss
+++ b/src/scss/components/blocks/_list-arrow.scss
@@ -1,27 +1,26 @@
 .list-arrow {
 	margin: 0;
 	padding-left: 0;
-	font-size: 24px;
 	list-style-type: none;
 
-	&--red {
-		line-height: 50px;
-		font-weight: 700;
-		color: $color-blue;
-	}
-
-	&--blue {
+	&--red-arrow {
 		font-family: $font-secondary;
 		font-size: 18px;
 		line-height: 24px;
+		font-weight: 700;
+		color: $color-blue;
+
+		@media (min-width: $breakpoint-desktop) {
+			font-size: 24px;
+			line-height: 32px;
+		}
 	}
 
-	&--two-col {
-		display: inline-grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: auto;
-		grid-column-gap: 24px;
-		grid-row-gap: 16px;
+	&--blue-arrow {
+		font-family: $font-secondary2;
+		font-size: 18px;
+		line-height: 24px;
+		font-weight: 500;
 	}
 
 	&__elem {
@@ -41,40 +40,31 @@
 			content: "";
 		}
 
-		.list-arrow--red & {
+		.list-arrow--red-arrow & {
+			margin-bottom: 34px;
 			&::before {
 				background-image: url("data:image/svg+xml,%3Csvg width='12' height='20' viewBox='0 0 12 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 19L10 10L1 1' stroke='%23E10000' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
 			}
-		}
-
-		.list-arrow--blue & {
-			&::before {
-				background-image: url("data:image/svg+xml,%3Csvg width='12' height='20' viewBox='0 0 12 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 19L10 10L1 1' stroke='%23004996' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
-			}
-		}
-
-		.list-arrow--blue & {
-			margin-bottom: 11px;
-			font-weight: 600;
 
 			@media (min-width: $breakpoint-laptop) {
 				margin-bottom: 27px;
 			}
-
-			&::before {
-				top: 0;
-				transform: none;
-			}
 		}
 
-		.list-arrow--blue-heavy & {
-			font-family: $font-secondary;
-			margin-bottom: 46px;
+		.list-arrow--blue-arrow & {
+			margin-bottom: 11px;
+			font-family: $font-primary;
+			font-weight: 500;
 
 			&::before {
-				width: 16px;
-				height: 24px;
-				background-image: url("data:image/svg+xml,%3Csvg width='16' height='24' viewBox='0 0 16 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 21L12 12L3 3' stroke='%23004996' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+				background-image: url("data:image/svg+xml,%3Csvg width='12' height='20' viewBox='0 0 12 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 19L10 10L1 1' stroke='%23004996' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+				top: 1px;
+				transform: none;
+			}
+
+			@media (min-width: $breakpoint-laptop) {
+				margin-bottom: 27px;
+				font-weight: 600;
 			}
 		}
 	}
