--- a/src/scss/components/blocks/_news-row.scss
+++ b/src/scss/components/blocks/_news-row.scss
@@ -3,14 +3,18 @@
 	grid-template-rows: auto;
 	grid-template-columns: 1fr;
 	grid-column-gap: 32px;
-	grid-row-gap: 52px;
+	grid-row-gap: 25px;
 
 	@media (min-width: $breakpoint-laptop) {
 		grid-template-columns: repeat(3, 1fr);
+		grid-row-gap: 52px;
 	}
 
 	&--two-col {
-		grid-template-columns: repeat(2, 1fr);
-		grid-column-gap: 50px;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-template-columns: repeat(2, 1fr);
+			grid-column-gap: 50px;
+		}
 	}
 }
