--- a/src/scss/components/blocks/_simple-card-row.scss
+++ b/src/scss/components/blocks/_simple-card-row.scss
@@ -1,30 +1,59 @@
 .simple-card-row {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: auto;
-	grid-column-gap: 32px;
+	grid-gap: 16px 11px;
+
+	@media (min-width: $breakpoint-desktop) {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: auto;
+		grid-column-gap: 32px;
+	}
+
+	&__card {
+		grid-column: 1/2;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-column: unset;
+		}
+	}
 
 	&__links {
 		display: grid;
 		grid-template-columns: 100%;
 		grid-template-rows: auto;
-		grid-row-gap: 32px;
+		grid-row-gap: 16px;
+		grid-row: 1/4;
+		grid-column: 2/3;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-row-gap: 32px;
+			grid-row: unset;
+			grid-column: unset;
+		}
 	}
 
 	&__link {
 		display: flex;
 		align-items: center;
-		justify-content: center;
 		background-color: $color-blue;
 		color: $color-white;
 		border-radius: 25px;
-		padding: 10px 15px;
+		padding: 10px 24px;
 		text-align: center;
 		transition: background-color $transition-default;
 		font-family: $font-additional;
-		font-size: 28px;
-		line-height: 32px;
+		font-size: 16px;
+		line-height: 24px;
 		font-weight: 900;
+
+		@media (min-width: $breakpoint-desktop) {
+			justify-content: center;
+			padding: 10px 15px;
+			font-size: 28px;
+			line-height: 32px;
+		}
 
 		&:hover {
 			background-color: darken($color-blue, 10%);
