--- a/src/scss/components/blocks/_tabs.scss
+++ b/src/scss/components/blocks/_tabs.scss
@@ -19,15 +19,22 @@
 
 	&__nav-list {
 		display: inline-flex;
-		margin: 0 -24px;
+		margin: 0 -18px;
 		padding-left: 0;
 		list-style-type: none;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin: 0 -24px;
+		}
 
 		.tabs--small & {
 			position: relative;
 			display: flex;
-			width: 100%;
 			margin: 0;
+
+			@media (min-width: $breakpoint-desktop) {
+				width: 100%;
+			}
 
 			&::after {
 				position: absolute;
@@ -43,11 +50,19 @@
 	}
 
 	&__nav-elem {
-		padding: 0 24px;
+		padding: 0 18px;
+
+		@media (min-width: $breakpoint-desktop) {
+			padding: 0 24px;
+		}
 
 		.tabs--small & {
 			flex-grow: 1;
 			padding: 0;
+
+			@media (min-width: $breakpoint-desktop) {
+				padding: 0;
+			}
 		}
 
 		.tabs__nav-list--three-col & {
@@ -61,8 +76,8 @@
 		border: none;
 		background-color: $color-transparent;
 		font-family: $font-secondary2;
-		font-size: 50px;
-		line-height: 50px;
+		font-size: 24px;
+		line-height: 1;
 		font-weight: 500;
 		color: #7A797A;
 		text-align: center;
@@ -87,9 +102,11 @@
 			color: $color-blue;
 		}
 
+		@media (min-width: $breakpoint-desktop) {
+			font-size: 50px;
+		}
+
 		&--active {
-			font-family: $font-secondary;
-			font-weight: 700;
 			color: $color-blue;
 
 			&::after {
@@ -106,13 +123,18 @@
 			justify-content: center;
 			width: 100%;
 			height: 100%;
-			padding: 20px 15px 39px;
-			font-family: $font-secondary;
-			font-size: 24px;
+			padding: 0 18px 18px;
+			font-family: $font-primary;
+			font-size: 14px;
 			line-height: 1;
 			font-weight: 700;
 			letter-spacing: .01em;
 			color: #004996;
+
+			@media (min-width: $breakpoint-desktop) {
+				padding: 20px 15px 39px;
+				font-size: 24px;
+			}
 
 			&::after {
 				max-width: 100%;
@@ -155,6 +177,36 @@
 
 		&--show {
 			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
+		&--hide {
+			opacity: 0;
+		}
+	}
+
+	&__all-btn {
+		display: none;
+		opacity: 0;
+		width: 100%;
+		margin-top: 34px;
+		transition: opacity $transition-default;
+
+		@media (min-width: $breakpoint-laptop) {
+			width: auto;
+			margin-top: 0;
+		}
+
+		&--active {
+			display: inline-flex;
+			opacity: 1;
+			transform: none;
+		}
+
+		&--show {
+			display: inline-flex;
 			position: absolute;
 			top: 0;
 			left: 0;
