--- a/src/scss/components/sections/_section-experience.scss
+++ b/src/scss/components/sections/_section-experience.scss
@@ -1,19 +1,34 @@
 .section-experience {
-	padding-top: 71px;
-	padding-bottom: 50px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-top: 71px;
+		padding-bottom: 50px;
+	}
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 60px;
-		font-family: $font-primary;
+		margin-bottom: 24px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 60px;
+		}
 	}
 
 	&__grid {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: 100%;
 		grid-template-rows: auto;
-		grid-column-gap: 32px;
+		grid-row-gap: 25px;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-template-columns: repeat(2, 1fr);
+			grid-column-gap: 32px;
+		}
 	}
 
 	&__card {}
+
+	&__button {
+		margin-top: 40px;
+	}
 }
