--- a/src/scss/components/sections/_section-hero.scss
+++ b/src/scss/components/sections/_section-hero.scss
@@ -8,9 +8,14 @@
 		margin-bottom: 20px;
 	}
 
-	&--industry {
+	&--industry,
+	&--service {
 		margin-top: 12px;
-		margin-bottom: 65px;
+		margin-bottom: 29px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 65px;
+		}
 	}
 
 	&--case {
@@ -21,11 +26,6 @@
 			margin-top: 10px;
 			margin-bottom: 58px;
 		}
-	}
-
-	&--simple {
-		margin-top: 18px;
-		margin-bottom: 69px;
 	}
 
 	&--about {
@@ -41,21 +41,18 @@
 		}
 
 		.section-hero--industry & {
-			padding: 67px 55px 27px;
+			padding: 27px 18px 25px;
 
 			@media (min-width: $breakpoint-laptop) {
 				padding: 67px 55px 27px;
 			}
 		}
 
-		.section-hero--simple & {
-			padding: 32px 78px 32px 51px;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
+		.section-hero--service & {
+			padding: 46px 18px 40px;
 
 			@media (min-width: $breakpoint-laptop) {
-				padding: 32px 78px 32px 51px;
+				padding: 67px 55px 27px;
 			}
 		}
 	}
@@ -120,11 +117,24 @@
 			}
 		}
 
-		.section-hero--industry & {
-			font-size: 72px;
-			line-height: 72px;
+		.section-hero--industry &, .section-hero--service & {
+			font-family: $font-secondary;
+			font-size: 32px;
+			line-height: 32px;
 			font-weight: 700;
-			margin-bottom: 44px;
+			margin-bottom: 0;
+
+			@media (min-width: $breakpoint-desktop) {
+				font-size: 72px;
+				line-height: 72px;
+				margin-bottom: 44px;
+			}
+		}
+
+		.section-hero--industry & {
+			@media (min-width: $breakpoint-desktop) {
+				font-family: $font-primary;
+			}
 		}
 	}
 
@@ -133,7 +143,7 @@
 		font-size: 18px;
 		line-height: 18px;
 
-		.section-hero--industry & {
+		.section-hero--industry &, .section-hero--service & {
 			margin-bottom: 46px;
 			font-family: $font-secondary;
 			font-size: 24px;
@@ -171,6 +181,29 @@
 			font-family: $font-secondary;
 			font-size: 24px;
 			line-height: 24px;
+		}
+
+		.section-hero--industry &, .section-hero--service & {
+			display: none;
+
+			@media (min-width: $breakpoint-desktop) {
+				display: block;
+			}
+		}
+
+		&--mobile {
+			@media (max-width: $breakpoint-desktop) {
+				display: block !important;
+				margin-top: 28px;
+				margin-bottom: 0 !important;
+				font-size: 18px !important;
+				line-height: 24px !important;
+				font-weight: 300;
+				color: $color-black;
+			}
+			@media (min-width: $breakpoint-desktop) {
+				display: none;
+			}
 		}
 	}
 
@@ -213,6 +246,7 @@
 	&__call-link {
 		color: inherit;
 		transition: color $transition-default;
+		white-space: nowrap;
 
 		&:hover {
 			color: $color-red;
@@ -234,13 +268,5 @@
 			max-width: 980px;
 			margin-right: 30px;
 		}
-	}
-
-	&__slogan {
-		margin: 0;
-		font-family: $font-additional;
-		font-size: 24px;
-		line-height: 50px;
-		font-weight: 700;
 	}
 }
