--- a/src/scss/components/sections/_section-industries.scss
+++ b/src/scss/components/sections/_section-industries.scss
@@ -1,43 +1,76 @@
 .section-industries {
-	padding-top: 16px;
-	padding-bottom: 97px;
+	padding-top: 23px;
+	padding-bottom: 55px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-top: 16px;
+		padding-bottom: 97px;
+	}
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 29px;
+		margin-bottom: 14px;
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 29px;
+		}
 	}
 
 	&__description {
 		margin-top: 0;
-		margin-bottom: 45px;
+		margin-bottom: 27px;
 		font-family: $font-secondary2;
-		font-size: 24px;
-		line-height: 32px;
+		font-size: 14px;
+		line-height: 14px;
 		font-weight: 500;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 45px;
+			font-size: 24px;
+			line-height: 32px;
+		}
 	}
 
 	&__grid {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-column-gap: 45px;
-		grid-template-rows: auto 178px auto;
-		grid-row-gap: 58px;
+		grid-template: 80px / repeat(2,1fr);
+		grid-auto-rows: 80px;
+		grid-gap: 16px 11px;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-template-columns: repeat(3, 1fr);
+			grid-column-gap: 45px;
+			grid-template-rows: auto 178px auto;
+			grid-row-gap: 58px;
+		}
 	}
 
 	&__card {
-		min-height: 272px;
+		@media (min-width: $breakpoint-desktop) {
+			min-height: 272px;
+		}
 
 		&--top {
-			grid-row: 1;
+			@media (min-width: $breakpoint-desktop) {
+				grid-row: 1;
+			}
 		}
+
 		&--top-wide {
-			grid-row: 1 / 3;
+			@media (min-width: $breakpoint-desktop) {
+				grid-row: 1 / 3;
+			}
 		}
+
 		&--bottom {
-			grid-row: 3;
+			@media (min-width: $breakpoint-desktop) {
+				grid-row: 3;
+			}
 		}
+
 		&--bottom-wide {
-			grid-row: 2 / 4;
+			@media (min-width: $breakpoint-desktop) {
+				grid-row: 2 / 4;
+			}
 		}
 	}
 }
