--- a/src/scss/components/sections/_section-news.scss
+++ b/src/scss/components/sections/_section-news.scss
@@ -1,11 +1,20 @@
 .section-news {
-	padding-top: 101px;
-	padding-bottom: 129px;
+	padding-top: 52px;
+	padding-bottom: 47px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-top: 101px;
+		padding-bottom: 100px;
+	}
 
 	&__tab-box {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin-bottom: 68px;
+		margin-bottom: 32px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 68px;
+		}
 	}
 }
