--- a/src/scss/components/sections/_section-services.scss
+++ b/src/scss/components/sections/_section-services.scss
@@ -1,7 +1,12 @@
 .section-services {
-	padding-top: 52px;
-	padding-bottom: 30px;
+	padding-top: 19px;
+	padding-bottom: 16px;
 	overflow: hidden;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-top: 52px;
+		padding-bottom: 30px;
+	}
 
 	&--career {
 		padding-top: 76px;
@@ -12,7 +17,11 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		margin-bottom: 50px;
+		margin-bottom: 30px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 50px;
+		}
 	}
 
 	&__title {
@@ -21,7 +30,24 @@
 
 	&__title-btn {
 		width: 100%;
-		max-width: 176px;
+
+		&--desktop {
+			display: none;
+			max-width: 176px;
+
+			@media (min-width: $breakpoint-laptop) {
+				display: inline-flex;
+			}
+		}
+
+		&--mobile {
+			display: flex;
+			margin-top: 23px;
+
+			@media (min-width: $breakpoint-laptop) {
+				display: none;
+			}
+		}
 	}
 
 	&__row {
@@ -64,9 +90,15 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 102px;
-		height: 102px;
-		margin: 0 auto 27px;
+		width: 60px;
+		height: 60px;
+		margin: 0 auto 20px;
+
+		@media (min-width: $breakpoint-desktop) {
+			width: 102px;
+			height: 102px;
+			margin-bottom: 27px;
+		}
 	}
 
 	&__icon {
@@ -77,7 +109,14 @@
 		margin: 0;
 		font-family: $font-secondary2;
 		font-weight: 500;
-		font-size: 24px;
-		line-height: 24px;
+		font-size: 14px;
+		line-height: 1;
+		letter-spacing: .01em;
+		text-align: center;
+
+		@media (min-width: $breakpoint-desktop) {
+			font-size: 24px;
+			line-height: 24px;
+		}
 	}
 }
