--- a/src/scss/components/sections/_section-slider-terminal.scss
+++ b/src/scss/components/sections/_section-slider-terminal.scss
@@ -1,36 +1,90 @@
 .section-slider-terminal {
-	padding-top: 67px;
-	padding-bottom: 126px;
+	padding-top: 24px;
+	padding-bottom: 50px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-top: 67px;
+		padding-bottom: 126px;
+	}
 
 	&__row {
 		display: grid;
-		grid-template-columns: 1fr 3fr;
+		grid-template-columns: 100%;
 		grid-template-rows: auto;
 		grid-column-gap: 32px;
+
+		@media (min-width: $breakpoint-desktop) {
+			grid-template-columns: 1fr 3fr;
+		}
 	}
 
 	&__col {
+		order: 2;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: flex-start;
+
+		@media (min-width: $breakpoint-desktop) {
+			order: 0;
+		}
 	}
 
 	&__slider {
 		width: 100%;
+		overflow: visible;
+
+		@media (min-width: $breakpoint-desktop) {
+			overflow: hidden;
+		}
+	}
+
+	&__text-box {
+		&--mobile {
+			@media (min-width: $breakpoint-desktop) {
+				display: none;
+			}
+		}
+
+		&--desktop {
+			display: none;
+			@media (min-width: $breakpoint-desktop) {
+				display: block;
+			}
+		}
+
+
 	}
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 40px;
+		margin-bottom: 28px;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 40px;
+		}
 	}
 
 	&__text {
-		max-width: 300px;
+		max-width: 250px;
 		margin-top: 0;
-		margin-bottom: 75px;
+		margin-bottom: 31px;
 		font-family: $font-secondary2;
-		font-size: 28px;
+		font-size: 18px;
 		line-height: 1;
+
+		@media (min-width: $breakpoint-desktop) {
+			max-width: 300px;
+			margin-bottom: 75px;
+			font-size: 28px;
+		}
+	}
+
+	&__nav {
+		margin: 30px auto 0;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin: 0;
+		}
 	}
 }
