--- a/src/scss/components/sections/_section-text.scss
+++ b/src/scss/components/sections/_section-text.scss
@@ -103,8 +103,14 @@
 	&__image {
 		display: block;
 		width: 100%;
-		margin-bottom: 68px;
+		height: 240px;
+		margin-bottom: 47px;
 		border-radius: 10px;
+		object-fit: cover;
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-bottom: 68px;
+		}
 	}
 
 	&__info {
