--- a/src/scss/grid/_container.scss
+++ b/src/scss/grid/_container.scss
@@ -3,6 +3,11 @@
 	max-width: 1690px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 24px;
-	padding-right: 24px;
+	padding-left: 14px;
+	padding-right: 14px;
+
+	@media (min-width: $breakpoint-desktop) {
+		padding-left: 24px;
+		padding-right: 24px;
+	}
 }
